Add celebration of life video.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#stories">Stories</a></li>
         <li><a href="#donations">Donations</a></li>
+        <li><a href="#celebration">Celebration of Life</a></li>
       </ul>
     </div>
   </nav>
@@ -146,6 +147,15 @@
       </dd>
     </dl>
     </div>
+  </div>
+
+  <div class="container" id="celebration">
+    <h2>Celebration of Life</h2>
+    <p>
+      A virtual celebration of life was held on March 26, 2022.
+      A <a href="jamil_celebration_of_life.mp4.zip"><strong>password-protected</strong> video is available for download</a>.
+      Please <a href="#" data-contact="cGFyc2lhZC5hemltemFkZWhAZ21haWwuY29t" data-subj="SW4gTG92aW5nIE1lbW9yeSBvZiBKYW1pbCBBemltemFkZWg=" onfocus="this.href = 'mailto:' + atob(this.dataset.contact) + '?subject=' + atob(this.dataset.subj || '')">send an email</a> if you would like to obtain the password.
+    </p>
   </div>
 
   <div class="container" id="contact">
